Fixed error page on mobile.

--- a/src/main/resources/static/css/error.css
+++ b/src/main/resources/static/css/error.css
@@ -48,15 +48,20 @@
 
     #smallNav {
         display: flex !important;
+        flex-direction: column;
     }
 
     #navbarLogoErrMobile {
-
+        width: 44px;
     }
 
-    img {
-        max-block-size: 190px;
-        margin-left: -109px !important;
+    .errorWrapper {
+        min-height: 530px;
+    }
+
+    .navbar-fixed {
+        width: 100%;
+        height: 44px !important;
     }
 
     footer {
